# ica-aroma

./: Dockerfile  manifest.json  pyproject.toml  run.py
fw_gear_ica_aroma/: common.py  main.py  metadata.py  parser.py
mcin_ica_aroma/: classification_plots.py
utils/: base.html  command_line.py  dry_run.py  zip_htmls.py
utils/report/: report.html  report.py
